--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,45 @@
 /* RESET */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /* HEADER */
-.header-conteiner{
+.header-conteiner {
     width: 100%;
     background-color: #edf2f7;
     text-align: center;
-    
+
 }
+
 /* MAIN */
-.main-conteiner{
+.main-conteiner {
     width: 700px;
     height: 800px;
     background-color: #edf2f7;
     margin: auto;
-   margin-top: 50px;
-   border-radius: 10px;
-        
+    margin-top: 50px;
+    border-radius: 10px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.search-box {
+    border-radius: 5px;
+    width: 150px;
+    margin-top: 50px;
+    padding: 10px;
+}
+
+.botton-task {
+    background-color: #14aaf5;
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+hr {
+    border: solid white 2px;
+    margin-top: 10px;
 }
