add: first task list

--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 /* HEADER */
 .header-conteiner {
     width: 100%;
     background-color: #edf2f7;
     text-align: center;
+    box-shadow: 10px 10px 10px lightgray;
 
 }
 
@@ -21,8 +21,15 @@
     margin: auto;
     margin-top: 50px;
     border-radius: 10px;
-    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    box-shadow: 10px 10px 10px lightgray;
+
+}
+
+.search-conteiner {
+    text-align: center;
+    margin-bottom: 30px;
+
 }
 
 .search-box {
@@ -42,4 +49,47 @@
 hr {
     border: solid white 2px;
     margin-top: 10px;
+}
+
+.task-list {
+    margin-top: 30px;
+    margin-left: 30px;
+
+}
+
+
+ul {
+    list-style-type: none;
+}
+
+.task-conteiner {
+    height: 30px;
+    width: 600px;
+    padding: 0px 20px;
+    margin:0;
+    box-shadow: 0px 10px 20px lightgray;
+    border-radius: 5px;
+    background-color: white;
+}
+.check{
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    line-height: 15px;
+    text-align: center;
+    font-size: 10px;
+    vertical-align: middle;
+    background-color: green;
+    color: white;
+    
+}
+.tag{
+    border-radius: 25px;
+    padding: 5px 10px;
+    font-size: 13px;
+}
+.blu{
+    background-color: blue;
+    color: white;
 }
